--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
            <a href="https://en.wikipedia.org/wiki/Black"> <div class="col-sm-12">
 <div class="blk"></div></a></div>
-</div></div>
+</div>
+</div>
 
 
              <div class="container">
